Add new scripts, archive old scripts